# devia-api-increment

./: .gitignore  README.md  docker-compose.yml  package-lock.json
back-fastapi/: .dockerignore  Dockerfile  README.md  database.py  docker-compose.yml  init.py  main.py  pyproject.toml  requirements.txt  schemas.py
back-fastapi/app/: __init__.py  count_table.py  main.py
vite-project/: .dockerignore  .env.example  API_INTEGRATION.md  Dockerfile  nginx.conf  package-lock.json
vite-project/src/: App.tsx  env.d.ts
vite-project/src/hooks/: useCountApi.ts
vite-project/src/services/: incrementApi.ts  mockApi.ts
